--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $font-stack1: 'Pacifico', cursive;
-$main-color: steelblue;
-$light-color: skyblue;
-$dark-color: #444;
-$background-img: url(../img/showcase.jpg)
+$main-color: rgb(104, 148, 184);
+$light-color: rgb(168, 201, 214);
+$dark-color: rgb(53, 63, 68);
+$background-img: url(img/1345508810-medium.jpg)
