--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,3 +1,49 @@
-.fancy-font {
-    font-family: $font-stack1;
+.container {
+    max-width: $website-width;
+    padding: 0 1.5rem;
+    margin: auto;
+    overflow: hidden;
+}
+
+.lead {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+//buttons
+%btn-shared {
+    display: inline-block;
+    padding: 0.4rem 1.5rem;
+    transition: all 0.5s;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    font-weight: bolder;
+}
+
+.btn {
+    &-main {
+        @extend %btn-shared;
+        color: #fff;
+        background-color: $main-color;
+    }
+
+    &-highlight {
+        @extend %btn-shared;
+        color: #333;
+        background-color: $highlight-color;
+    }
+
+    &-dark {
+        @extend %btn-shared;
+        color: #f4f4f4;
+        background-color: $dark-color;
+    }
+}
+
+button[class^='btn-']:hover,
+a[class^='btn-']:hover,
+input[class^='btn-']:hover {
+    background-color: $highlight-color;
+    color: $shock-color;
 }
