--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,17 @@
 $font-stack1: 'Pacifico', cursive;
+$website-width: 1280px;
 $main-color: rgb(104, 148, 184);
-$light-color: rgb(168, 201, 214);
+$light-color: rgb(232, 241, 245);
 $dark-color: rgb(53, 63, 68);
-$background-img: url(img/1345508810-medium.jpg)
+$highlight-color: rgb(255, 204, 16);
+$shock-color: rgb(255, 0, 64);
+$background-img: url(../img/1345508810-medium.jpg);
+
+// Set text color
+@function set-text-color($color) {
+    @if(lightness($color) > 50) {
+        @return #000;
+    }   @else {
+        @return #fff;
+    }
+}
