--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
 $font-stack1: 'Pacifico', cursive;
+$font-stack2: 'Goldman', cursive;
 $website-width: 1280px;
 $main-color: rgb(104, 148, 184);
 $light-color: rgb(232, 241, 245);
