--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,7 +42,7 @@ img {
     #logo {
         font-size: 2.5rem;
         line-height: 1.5;
-        color: $dark-color;
+        color: $main-color;
         padding:0 1rem 0 1rem;
         // background-color: $light-color;
         // border-radius: 10px;
@@ -72,6 +72,7 @@ img {
         border-bottom: 3px transparent solid;
         padding-bottom: 0.5rem;
         transition: border-color 0.5s, color 0.5s;
+        color: $light-color;
 
         &:hover {
             border-color: $highlight-color;
@@ -91,6 +92,8 @@ img {
         height: 75vh;
         color: #fff;
 
+        
+
         .header-content {
             text-align: center;
             padding-top: 15%;
@@ -100,6 +103,12 @@ img {
             }
 
         }
+    }
+
+    &-inner {
+        background: $background-img no-repeat center center/cover;
+        height: 10vh;
+        color: #fff;
     }
 }
 
