--- a/css/main.css
+++ b/css/main.css
@@ -384,6 +384,75 @@ img {
   margin-top: 1.5rem;
 }
 
+.about-me {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr;
+      grid-template-columns: 1fr 2fr;
+  grid-gap: 1rem;
+}
+
+.about-me .bio-image {
+  height: 100%;
+  width: 100%;
+}
+
+.about-me .bio {
+  border-left: 5px #ffcc10 solid;
+}
+
+.about-me h3 {
+  padding: 1rem 0;
+}
+
+.about-me p {
+  padding: 0 1rem 1rem 1rem;
+  font-weight: 800;
+}
+
+.about-skills {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.about-skills .logos {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  background: #6894b8;
+  border-left: 5px solid #ffcc10;
+}
+
+.about-skills .logos img {
+  height: 100px;
+  width: 100px;
+  padding: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.about-skills .skills {
+  background: #e8f1f5;
+  font-weight: 800;
+  padding: 1rem 0;
+  border-left: 5px solid #ffcc10;
+}
+
+.about-skills .certs {
+  background: #6894b8;
+  font-weight: 800;
+  padding: 1rem 0;
+  border-left: 5px solid #ffcc10;
+}
+
 #home-c {
   background: #353f44;
   color: #fff;
