--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,6 @@ button[class^='btn-']:hover,
 a[class^='btn-']:hover,
 input[class^='btn-']:hover {
   background-color: #ffcc10;
-  color: #ff0040;
 }
 
 .py-1 {
@@ -92,7 +91,7 @@ input[class^='btn-']:hover {
 .bottom-line {
   height: 3px;
   width: 6rem;
-  background: #ff0040;
+  background: #ffcc10;
   display: block;
   margin: 1rem auto 1rem auto;
 }
@@ -239,6 +238,80 @@ input[class^='btn-']:hover {
   margin: 0;
 }
 
+@media (max-width: 800px) {
+  #main-nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #header-home {
+    height: 30rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #header-home .header-content {
+    padding-top: 5rem;
+  }
+  #header-inner h2 {
+    display: none;
+  }
+  #header-inner ul li {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media (max-width: 500px) {
+  #main-nav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #main-nav ul li {
+    padding: 1rem;
+  }
+  #header-home {
+    border-bottom: 3px solid #6894b8;
+    background-position: 20% 30%;
+  }
+  #header-home .header-content {
+    display: none;
+  }
+  #header-inner {
+    background: url(../img/1345508810-medium.jpg) no-repeat center center/cover;
+    height: 10vh;
+    color: #fff;
+    border-bottom: 5px solid #ffcc10;
+  }
+  #header-inner #main-nav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #header-inner #main-nav ul li {
+    padding: 0.5rem;
+  }
+  #header-inner #main-nav ul a {
+    padding-bottom: 0.2rem;
+    font-size: 1rem;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -346,7 +419,7 @@ img {
 
 #header-inner {
   background: url(../img/1345508810-medium.jpg) no-repeat center center/cover;
-  height: 10vh;
+  height: 30vh;
   color: #fff;
   border-bottom: 5px solid #ffcc10;
 }
